# AgentDaC

./: .gitignore  ARCHITECTURE.md  README.md  art_model_config.py  dac_agent.py  debug_utils.py  easy2hard_dac.ipynb  main.py  pyproject.toml  ray.ipynb  rock-paper-tool-use.ipynb  run_vllm.server.py  sys_prompt.py  temporal_clue.ipynb  tic_tac_toe.ipynb  tic_tac_toe_dac.ipynb  tic_tac_toe_orig.ipynb  training.py  trajectory_utils.py  vllm_client.py  vllm_config.yaml  vllm_model_config.py
configs/: vllm_model_config.py
easy2hard/: run_exp.py  run_exp_new.py  trainer.py
examples/: architecture_showcase.py  unified_agents_demo.py
experiments/: base_experiment.py  experiment_runner.py  general_rewards.py  run_BigCodeBench.py  run_easy2hard.py  run_easy2hard_guy.py  run_easy2hard_ruler.py  run_easy2hard_tools.py  run_math.py  run_mmlu_pro.py  run_mult.py  runner.py
mmlu_pro/: run_exp.py  trainer.py  utils.py
notebooks/: agent_test.ipynb  analyze.ipynb  easy2hard.ipynb  easy2hard_dac.ipynb  easy2hard_dac_v2.ipynb  easy2hard_structured.ipynb  easy2hard_tools.ipynb  evaluate.ipynb  mmlu.ipynb  mmlu_dac.ipynb  mmlu_pro.ipynb  output_005.parquet  output_009.parquet  ray.ipynb  rock-paper-tool-use.ipynb  stress_test.ipynb  tic_tac_toe.ipynb  tic_tac_toe_dac.ipynb  tic_tac_toe_orig.ipynb  train.ipynb  trajectory_vis.ipynb
scripts/: benchmark_vllm.py  run_easy2hard.py  run_mmlu_pro.py  run_vllm_server.py
src/: __init__.py  agent_dac_guided.py  aliases.py  dac_agent.py  dac_agent_all_traj.py  dac_agent_single.py  dac_agent_single_frozen.py  dac_agent_tools.py  models.py  (+10 more)
(+283 files in other folders)
