[project]
name = "agentdac"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "numpy<2.0",
    "openpipe",
    "openpipe-art[backend]",
    "datasets",
    "torch",
    "torchtune",
    "nbformat",
    "transformers<4.54.0",
]
