[project]
name = "agentdac"
version = "0.4.1"
description = "DAC Agents with RL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "numpy<2.0",
    "openpipe",
    "openpipe-art[backend]==0.4.8",
    "datasets",
    "torch",
    "torchtune",
    "nbformat",
    "transformers<4.54.0",
    "math-verify>=0.8.0",
    "langchain-core>=0.3.74",
]

[tool.uv.workspace]
members = [
    "python",
]
