[project]
name = "agentdac"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "numpy<2.0",
    "openpipe",
    "openpipe-art[backend]==0.4.9",
    "datasets",
    "torch",
    "torchtune",
    "nbformat",
    "transformers<4.54.0",
    "math-verify>=0.8.0",
]

[tool.uv.workspace]
members = [
    "python",
]